--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "node app.js",
+    "nodemon": "nodemon app.js"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,9 @@
     "ejs": "^3.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.12",
-    "nodemon": "^2.0.1"
+    "morgan": "^1.9.1",
+    "nodemon": "^2.0.1",
+    "passport": "^0.4.0",
+    "passport-instagram": "^1.0.0"
   }
 }
