Partially added google login

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "express": "^4.17.1",
+    "googleapis": "^45.0.0",
+    "https-localhost": "^4.4.1",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
     "nodemon": "^2.0.1",
     "passport": "^0.4.0",
-    "passport-instagram": "^1.0.0"
+    "passport-google-oauth": "^2.0.0"
   }
 }
