--- a/package.json
+++ b/package.json
@@ -20,15 +20,29 @@
   "homepage": "https://github.com/damianomondaini/myMedia#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "connect-ensure-login": "^0.1.1",
+    "connect-mongo": "^3.2.0",
+    "connect-redis": "^4.0.3",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
+    "ejs-lint": "^0.3.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "fs": "0.0.1-security",
+    "google-auth-library": "^5.5.1",
     "googleapis": "^45.0.0",
     "https-localhost": "^4.4.1",
     "mongoose": "^5.7.12",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.1",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^2.0.0"
+    "passport-google-oauth": "^2.0.0",
+    "passport-google-oauth2": "^0.2.0",
+    "passport-local": "^1.0.0",
+    "readline": "^1.3.0",
+    "redis": "^2.8.0"
   }
 }
