--- a/package.json
+++ b/package.json
@@ -19,12 +19,12 @@
   },
   "homepage": "https://github.com/damianomondaini/myMedia#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "connect-ensure-login": "^0.1.1",
     "connect-mongo": "^3.2.0",
-    "connect-redis": "^4.0.3",
     "cookie-parser": "^1.4.4",
-    "cors": "^2.8.5",
+    "cookie-session": "^1.3.3",
     "dotenv": "^8.2.0",
     "ejs": "^3.0.1",
     "ejs-lint": "^0.3.0",
@@ -42,7 +42,6 @@
     "passport-google-oauth": "^2.0.0",
     "passport-google-oauth2": "^0.2.0",
     "passport-local": "^1.0.0",
-    "readline": "^1.3.0",
-    "redis": "^2.8.0"
+    "session-file-store": "^1.3.1"
   }
 }
